# hy_mcu_demo_bak

./: .gitignore  Makefile.am  README.md  build.sh  configure.ac
example/: Makefile.am  led.c
m4/: check_libhy_hal.m4
res/at/: Makefile.am
res/at/at32f4xx/: Makefile.am
