# ===============================================================
# 
# Release under GPLv-3.0.
# 
# @file    Makefile.am
# @brief   
# @author  gnsyxiang <gnsyxiang@163.com>
# @date    06/09 2021 14:56
# @version v0.0.1
# 
# @since    note
# @note     note
# 
#     change log:
#     NO.     Author              Date            Modified
#     00      zhenquan.qiu        06/09 2021      create the file
# 
#     last modified: 06/09 2021 14:56
# ===============================================================

# ------------------
# defining variables
# ------------------
_dist_file_com  =

# ---------------
# make dist files
# ---------------
_dist_file_com  += \
                   AT32F407xG_FLASH.ld
EXTRA_DIST      = $(_dist_file_com)

